--- a/08_events/01_one.html
+++ b/08_events/01_one.html
@@ -19,6 +19,7 @@
    </div>
 </body>
 <script>
+    //javascript is a sequential run language
     // document.getElementById('owl').onclick = function(){
     //     alert("owl clicked")
     // }
@@ -30,6 +31,9 @@
     // target, toElement, srcElement, currentTarget,
     // clientX, clientY, screenX, screenY
     // altkey, ctrlkey, shiftkey, keyCode
+
+
+    //event propogations (capturing(z-a)->true, bubbling(a-z)->false)
 
     // document.getElementById('images').addEventListener('click', function(e){
     //     console.log("clicked inside the ul");
